# star-fee-distribution

./: Anchor.toml  Cargo.toml  README.md  package.json
idls/: damm_v2.json
libs/damm_v2/: Cargo.toml
programs/star-fee-distribution/: Cargo.toml
programs/star-fee-distribution/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/star-fee-distribution/src/instructions/: claim_fees_to_pda.rs  crank_fee_distribution.rs  deposit.rs  depositor_record.rs  distribute_fees.rs  initialize_distribution_config.rs  initialize_honorary_position.rs  mod.rs  query_depositor.rs  withdraw.rs
programs/star-fee-distribution/src/states/: crank_state.rs  depositor_record.rs  distribution_config.rs  mod.rs  vault_stats.rs
tests/: complete_integration.tests.ts  deposit_withdraw.tests.ts  distribution_config.tests.ts  fee_distribution_crank.tests.ts  initialize_honorary_position_integration.tests.ts  initialize_honorary_position_real_integration.tests.ts  test_config.ts
tests/utils/: bankrun.ts  damm_v2_integration.ts
